# tdep-view

./: .gitignore  README.md  pyproject.toml
docs/: manual.md
examples/: 01_load_and_info.py  02_export_formats.py  03_displacement_analysis.py  04_visualize.py  05_interactive_pyvista.py  README.md  _data.py  tdep-view-demo.ipynb
tdep/: __init__.py
tdep/visualization/: __init__.py  analysis.py  cli.py  models.py
tdep/visualization/exporters/: __init__.py  base.py  extxyz.py  lammps.py
tdep/visualization/io/: __init__.py  meta.py  poscar.py  trajectory_io.py
tdep/visualization/viewers/: __init__.py  pyvista_viewer.py  scene.py
tests/: test_analysis.py  test_cli.py  test_exporters.py  test_io.py  test_movie.py  test_pyvista_viewer.py  test_scene.py
tests/data/: infile.ssposcar  infile.stat  infile.ucposcar
