[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tdep-view"
version = "0.0.1"
description = "Trajectory visualization for TDEP-style atomistic MD workflows"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy"]

[project.optional-dependencies]
viz = ["pyvista", "vtk"]
notebook = ["ase", "nglview", "ipywidgets"]
movie = ["imageio"]
dev = ["pytest"]

[project.scripts]
tdep-view = "tdep.visualization.cli:main"

[tool.setuptools.packages.find]
include = ["tdep*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
